src/test/ui/consts/miri_unleashed/abi-mismatch.stderr
warning: skipping const checks
  --> $DIR/abi-mismatch.rs:9:1
   |
LL | / const fn call_rust_fn(my_fn: extern "Rust" fn()) {
LL | |
LL | |     my_fn();
LL | |
LL | |
LL | |
LL | | }
   | |_^

warning: skipping const checks
  --> $DIR/abi-mismatch.rs:17:1
   |
LL | static VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: could not evaluate static initializer
  --> $DIR/abi-mismatch.rs:11:5
   |
LL |     my_fn();
   |     ^^^^^^^
   |     |
   |     calling a function with ABI C using caller ABI Rust
   |     inside `call_rust_fn` at $DIR/abi-mismatch.rs:11:5
...
LL | static VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   |                  --------------------------------------------------------------------- inside `VAL` at $DIR/abi-mismatch.rs:17:18

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
